[project]
name = "pybrl"
version = "0.1.0"
description = "A Grade-2 Braille Translation system written entirely in Python"
readme = "README.md"
requires-python = ">=3.5"
license = {file = "LICENSE"}
keywords = ["braille"]

authors = [
  { name = "Antonis Katzourakis" }
]
maintainers = [
  { name = "Antonis Katzourakis" }
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Audience
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",

  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

  # Supported Python version
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "asciimathml ~= 0.9.5.1",
  "six"
]

[tool.setuptools]
packages = [
  "utils",
  "languages",
  "brl_mathematics"
]
py-modules = ["pybrl"]

[project.optional-dependencies]
pdf = ["pdfminer==20140328"]

[project.urls]
"Homepage" = "https://github.com/ant0nisk/pybrl/blob/master/README.md"
"Bug Reports" = "https://github.com/ant0nisk/pybrl/issues"
"Source" = "https://github.com/ant0nisk/pybrl"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
